# butia_vision_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: AxisAlignedBoundingBox.msg  BodyPart.msg  Description.msg  Description2D.msg  Description3D.msg  DescriptionIdentifier.msg  FaceDescription.msg  FaceEncoding.msg  Frame.msg  GraspPose.msg  Level.msg  Line.msg  Person.msg  PoseLandmark.msg  PoseLandmarks.msg  Recognitions2D.msg  Recognitions3D.msg  Shelf.msg
srv/: GraspGenerator.srv  ImageRequest.srv  LookAtDescription3D.srv  PlaceableArea.srv  SegmentationRequest.srv  SetClass.srv  ShelfClassification.srv
